Top district text overflow problem solved

--- a/src/App.scss
+++ b/src/App.scss
@@ -3394,7 +3394,6 @@ footer {
 
       h5 {
         display: inline-block !important;
-        flex: 0 1;
         margin-left: 0.5rem;
         margin-top: 0.15rem;
         width: auto !important;
